[package]
name = "vm-kvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "KVM-backed Hypervisor implementation. Linux-only, feature-gated."

[dependencies]
vm-core.workspace = true
kvm-ioctls = { version = "0.24.0", optional = true }
kvm-bindings = { version = "0.14.0", optional = true }
vm-memory = { version = "0.17.1", default-features = false, features = ["backend-mmap"], optional = true }
linux-loader = { version = "0.13.2", features = ["bzimage"], optional = true }
libc = { version = "0.2.185", optional = true }
vmm-sys-util = { version = "0.15.0", optional = true }
# virtio-vsock's MmioTransport is pure logic (no KVM), but it's only
# used by the KVM backend's device model, so gate it behind `kvm`.
virtio-vsock = { workspace = true, optional = true }
# proto framing/messages for the host side of the vsock exec path; only
# the KVM backend speaks it, so gate it behind `kvm` too.
proto = { workspace = true, optional = true }
# Snapshot format (manifest + memory backing file). The vm-kvm backend
# captures/restores KVM state into this layout; gate behind `kvm`.
snapshot = { workspace = true, optional = true }
# serde for serializing the captured vCPU/machine state sidecars; the
# kvm-bindings `serde` feature derives (de)serialize on the KVM structs.
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Real KVM deps (kvm-ioctls, vm-memory, linux-loader) arrive with the `kvm`
# feature in M1. Keeping them out of the default build keeps
# `cargo build --workspace` fast and portable (incl. in the gVisor sandbox,
# which has no /dev/kvm).

[features]
default = []
# Enable the real KVM backend. Requires Linux + /dev/kvm at runtime.
kvm = ["dep:kvm-ioctls", "dep:kvm-bindings", "dep:vm-memory", "dep:linux-loader", "dep:libc", "dep:vmm-sys-util", "dep:virtio-vsock", "dep:proto", "dep:snapshot", "dep:serde", "dep:serde_json"]

[lints]
workspace = true
