[package]
name = "virtio-queue-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# This is a separate Cargo workspace so it does not get compiled as part of the
# main workspace on stable (cargo-fuzz / libfuzzer require nightly).
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
virtio-queue = { path = ".." }

# Fuzz targets — each maps to a file under fuzz_targets/.

[[bin]]
name = "desc_chain"
path = "fuzz_targets/desc_chain.rs"
test = false
doc = false

[[bin]]
name = "avail_ring"
path = "fuzz_targets/avail_ring.rs"
test = false
doc = false

[[bin]]
name = "used_ring"
path = "fuzz_targets/used_ring.rs"
test = false
doc = false
